--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "dev": "nodemon ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,12 @@
   "homepage": "https://github.com/sndrem/spurven-2.0#readme",
   "dependencies": {
     "@slack/bolt": "^3.12.1",
+    "date-fns": "^2.29.2",
     "dotenv": "^16.0.2",
     "request-promise": "^4.2.6"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/request-promise": "^4.1.48",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
